# pypok-wrapper

./: dust_clnoise.fits  dust_clt.fits  dust_l.fits  dust_map.fits  dust_noise.fits  ipoker.py  mask.fits  mask_raw.fits  params_poker.par  poker.par  poker_example.py  pythonized_ipoker.py  pythonized_poker_example.py  set_multipols.py
Poker_IDL/: AUTHORS  INSTALL  READ_Copyright_Licenses.txt  beam.fits  beam1.fits  bintab.fits  map_k_binning.fits  mask.fits  patch.fits  poker.par
Poker_IDL/F90/: #poker_mbb.F90#  #poker_tools.F90#  Makefile  Makefile.ale  Makefile.am  Makefile.cmaster.mpi  Makefile.example  Makefile.franklin  Makefile.gui  Makefile.in  Makefile.inf-calcul1  Makefile.nico  README  README.cmaster.mpi  myoldMakefile  paramfile.par.copy  poker_count_tasks.F90  poker_give_map_b.F90  poker_input.F90  poker_mbb.F90  poker_types.F90
Poker_IDL/IDL/: #mc_reduce.pro#  #poker.par#  #poker_cross_example.pro#  #poker_sides.pro#  bintab.fits  cb2cmn.pro  check_dmn.pro  check_hpoker.pro  check_hpoker_nomask.pro  check_hpoker_with_mask.pro  check_ipoker.pro  check_ipoker.pro~  cls2map.pro  cls2map.pro~  cmn.fits  cmn2cb.pro  corr_mat.fits  cov.fits  cov_mat.fits  cu2maps.pro  defined.pro  give_map_k.pro  give_map_k.pro~  give_map_k.py  give_map_k.py~  hpoker.pro  igive_map_b.pro  igive_map_b.pro~  ipoker.pro  ipoker_arrays.pro  ipoker_arrays.pro~  ipoker_arrays_mpi.pro  ipoker_arrays_mpi.pro~  ipoker_mpi.pro  ipoker_mpi.pro~  k_out.fits  k_out_idl.fits  make_bintab.pro  make_bintab.pro~  mapt_meanless.fits  (+28 more)
Poker_IDL/Python/: cls2map.py  cls2map.py~  cmn2cb.py  (+11 more)
(+1519 files in other folders)
